# cortex

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh  test_layer2.py
agents/: __init__.py  bootstrapper.py  decay.py  distiller.py  mcp_server.py  observer.py  observer_worker.py  retriever.py
cli/: __init__.py  commands.py  main.py  start.py  stop.py
core/: __init__.py  coverage.py  embeddings.py  events.py  inject.py  llm.py  sample_data.py  schema.py  session.py  shared.py  storage.py
docs/: IMPLEMENTATION_CHECKLIST.md  STATUS_SUMMARY.md
gardener/: conflict.py  dueler.py  gardener.py  meta.py
retrieval/: ast_filter.py  ast_filter.rs  reranker.py  reranker_jaccard.py  semantic.py
retrieval/ast_filter/: Cargo.toml
retrieval/ast_filter/src/: main.rs
templates/: CORTEX_template.md  renderer.py
tests/: test_cli.py  test_coverage.py  test_decay.py  test_distiller.py  test_gardener.py  test_observer.py  test_retrieval.py
viewer/: app.py
